[metadata]
name = pyCoreWLAN
version = 1.0.2
author = Lawson Oates
description = A Python package that provides stubs for the PyObjC CoreWLAN Wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lawsonoates/pyCoreWLAN
project_urls =
    Bug Tracker = https://github.com/lawsonoates/pyCoreWLAN/issues
    repository = https://github.com/lawsonoates/pyCoreWLAN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find: